# autoarcana

./: Cargo.toml
src/: main.rs
src/client/: app.rs  event.rs  game_state_listener.rs  input_handler.rs  mod.rs  player_action_listener.rs  tui.rs  ui.rs
src/engine/: ability.rs  ability_ordering.rs  card.rs  card_play.rs  card_store.rs  counters.rs  deck.rs  game.rs  game_facade.rs  game_state_snapshot.rs  mana.rs  messages.rs  mod.rs  object.rs  permanent.rs  player.rs  prelude.rs  state_based_actions.rs  temp_client.rs  type_line.rs
src/engine/util/: id.rs
src/impls/: abilities.rs  card_plays.rs  cards.rs  mod.rs
