[package]
name = "tabulator_arcana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
dyn-clone = "1.0.16"
log = "0.4.20"
rand = "0.8.5"
ratatui = "0.25.0"
simple-logging = "2.0.2"
tokio = { version = "1.35.1", features = ["sync"] }
